Putting R Markdown stuff ahead of maintenance stuff

--- a/_includes/all_figures.html
+++ b/_includes/all_figures.html
@@ -5,3 +5,5 @@
 <p><img alt="Source and Destination Files" src="{{ site.github.url }}/fig/file-mapping.svg" /></p>
 <hr/>
 <p><img alt="Formatting Rules" src="{{ site.github.url }}/fig/episode-format-small.png" /></p>
+<hr/>
+<p><img alt="plot of chunk plot-example" src="../fig/swc-rmd-plot-example-1.png" /></p>
