Tidying up some files

--- a/_includes/all_figures.html
+++ b/_includes/all_figures.html
@@ -1,3 +1,5 @@
+<p><img alt="" src="{{ site.root }}/fig/using-github-import.png" /></p>
+<hr/>
 <p><img alt="Forking Repositories" src="{{ site.root }}/fig/forking.svg" /></p>
 <hr/>
 <p><img alt="Repository Links" src="{{ site.root }}/fig/repository-links.svg" /></p>
@@ -6,4 +8,6 @@
 <hr/>
 <p><img alt="Formatting Rules" src="{{ site.root }}/fig/episode-format-small.png" /></p>
 <hr/>
-<p><img alt="plot of chunk plot-example" src="../fig/swc-rmd-plot-example-1.png" /></p>
+<p><img alt="" src="{{ site.root }}/fig/episode-format.png" /></p>
+<hr/>
+<p><img alt="plot of chunk plot-example" src="../fig/rmd-plot-example-1.png" /></p>
