--- a/_includes/all_figures.html
+++ b/_includes/all_figures.html
@@ -1,13 +1,13 @@
-<p><img alt="" src="{{ site.github.url }}/fig/using-github-import.png" /></p>
+<p><img alt="" src="../fig/using-github-import.png" /></p>
 <hr/>
-<p><img alt="Forking Repositories" src="{{ site.github.url }}/fig/forking.svg" /></p>
+<p><img alt="Forking Repositories" src="../fig/forking.svg" /></p>
 <hr/>
-<p><img alt="Repository Links" src="{{ site.github.url }}/fig/repository-links.svg" /></p>
+<p><img alt="Repository Links" src="../fig/repository-links.svg" /></p>
 <hr/>
-<p><img alt="Source and Destination Files" src="{{ site.github.url }}/fig/file-mapping.svg" /></p>
+<p><img alt="Source and Destination Files" src="../fig/file-mapping.svg" /></p>
 <hr/>
-<p><img alt="Formatting Rules" src="{{ site.github.url }}/fig/episode-format-small.png" /></p>
+<p><img alt="Formatting Rules" src="../fig/episode-format-small.png" /></p>
 <hr/>
-<p><img alt="" src="{{ site.github.url }}/fig/episode-format.png" /></p>
+<p><img alt="" src="../fig/episode-format.png" /></p>
 <hr/>
 <p><img alt="plot of chunk plot-example" src="../fig/rmd-plot-example-1.png" /></p>
