Fixing broken image link in setup instructions.
1.  Fixing image link in `setup.md`.
2.  Regenerating all-figures.

Closes #42.

--- a/_includes/all_figures.html
+++ b/_includes/all_figures.html
@@ -1,4 +1,4 @@
-<p><img alt="" src="../fig/using-github-import.png" /></p>
+<p><img alt="" src="{{ site.github.url }}/fig/using-github-import.png" /></p>
 <hr/>
 <p><img alt="Forking Repositories" src="../fig/forking.svg" /></p>
 <hr/>
