--- a/_includes/episode_navbar.html
+++ b/_includes/episode_navbar.html
@@ -29,8 +29,10 @@
     </h3>
   </div>
   <div class="col-md-10">
+    {% if include.episode_navbar_title %}
     <h3 class="maintitle"><a href="{{ site.github.url }}/">{{ site.title }}</a></h3>
     <h1 class="maintitle">{{ page.title }}</h1>
+    {% endif %}
   </div>
   <div class="col-md-1">
     <h3>
