Making uplinks resolve correctly

--- a/_includes/episode_navbar.html
+++ b/_includes/episode_navbar.html
@@ -22,7 +22,7 @@
       {% if prev_episode %}
       <a href="{{ page.root }}{{ prev_episode.url }}"><span class="glyphicon glyphicon-menu-left"></span></a>
       {% else %}
-      <a href="{{ page.root }}"><span class="glyphicon glyphicon-menu-up"></span></a>
+      <a href="{{ page.root }}/"><span class="glyphicon glyphicon-menu-up"></span></a>
       {% endif %}
     </h3>
   </div>
@@ -37,7 +37,7 @@
       {% if next_episode %}
       <a href="{{ page.root }}{{ next_episode.url }}"><span class="glyphicon glyphicon-menu-right"></span></a>
       {% else %}
-      <a href="{{ page.root }}"><span class="glyphicon glyphicon-menu-up"></span></a>
+      <a href="{{ page.root }}/"><span class="glyphicon glyphicon-menu-up"></span></a>
       {% endif %}
     </h3>
   </div>
