Removing footnote marker

--- a/_includes/syllabus.html
+++ b/_includes/syllabus.html
@@ -3,7 +3,7 @@
   Days are displayed if at least one episode has 'start = true'.
 {% endcomment %}
 <div class="syllabus">
-  <h2>Schedule <sup><a href="#fn1" id="ref1">1</a></sup></h2>
+  <h2>Schedule</h2>
 
   {% assign day = 0 %}
   {% assign multiday = false %}
