Make first changes to index page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{{ page.root }}/assets/css/bootstrap-theme.css" />
     <link rel="stylesheet" type="text/css" href="{{ page.root }}/assets/css/lesson.css" />
     {% if site.carpentry == "swc" %}
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon-swc.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon-clem.ico" />
     {% elsif site.carpentry == "dc" %}
     <link rel="shortcut icon" type="image/x-icon" href="/favicon-dc.ico" />
     {% elsif site.carpentry == "lc" %}
