--- a/_includes/lesson_footer.html
+++ b/_includes/lesson_footer.html
@@ -5,14 +5,7 @@
   <div class="row">
     <div class="col-md-6" align="left">
       <h4>
-	Copyright &copy; 2016–{{ 'now' | date: "%Y" }}
-	{% if site.carpentry == "swc" %}
-	<a href="{{ site.swc_site }}">Software Carpentry Foundation</a>
-	{% elsif site.carpentry == "dc" %}
-	<a href="{{ site.dc_site }}">Data Carpentry</a>
-	{% elsif site.carpentry == "lc" %}
-	<a href="{{ site.lc_site }}">Library Carpentry</a>
-	{% endif %}
+        <a href="http://www.clemson.edu">Clemson University</a>
       </h4>
     </div>
     <div class="col-md-6" align="right">
